@@ -3,7 +3,7 @@ use warnings;
 
 use File::Object;
 use PYX::Optimization;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 7;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -81,4 +81,38 @@ stdout_is(
 	},
 	$right_ret,
 	'Complex data which are cleaned.',
+);
+
+# Test.
+$right_ret = <<'END';
+-žluťoučký
+-žluťoučký
+-žluťoučký
+-žluťoučký
+-žluťoučký
+-žluťoučký
+END
+stdout_is(
+	sub {
+		$obj->parse_file($data_dir->file('ex6.pyx')->s);
+		return;
+	},
+	$right_ret,
+	'Different data which are cleaned (simple - utf8).',
+);
+
+# Test.
+$right_ret = <<'END';
+(žlutá
+Aattr červená
+)žlutá
+?app color=červená
+END
+stdout_is(
+	sub {
+		$obj->parse_file($data_dir->file('ex7.pyx')->s);
+		return;
+	},
+	$right_ret,
+	'PYX rewrite in utf8.',
 );
