@@ -1,0 +1,4 @@
+(žlutá
+Aattr červená
+)žlutá
+?app color=červená
